gap fixed in calander

--- a/src/Component/ScheduleMeeting/calendar.css
+++ b/src/Component/ScheduleMeeting/calendar.css
@@ -629,8 +629,6 @@ div#calendar-modal .modal-body .col-6.mb-3.form-check {
     #calendar-modal .modal-body .row .col-6.mb-3 {
       width: 100%;
   }
-  .schedule-container {
-    padding: 0px !important;
-  }
+
    }
 
